# TweetMyCommit

backend/: main.py  pyproject.toml  run.sh
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
